--- a/config_tun_ralip.json
+++ b/config_tun_ralip.json
@@ -32,7 +32,7 @@
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode":  "Global", "server": "dns_proxy"},
-     {"source_ip_cidr": "192.168.3.0/24", "server": "dns_proxy"},
+     {"source_ip_cidr": ["192.168.3.0/24", "192.168.4.0/24", "192.168.5.0/24"], "server": "dns_proxy"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ], 
