--- a/config_tun_fkip.json
+++ b/config_tun_fkip.json
@@ -38,6 +38,10 @@
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode": "Global", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.3.0/24", "rule_set": "domain-whoami", "server": "H3Dns_tk01"},
+     {"source_ip_cidr": "192.168.4.0/24", "rule_set": "domain-whoami", "server": "H3Dns_tk02"},
+     {"source_ip_cidr": "192.168.5.0/24", "rule_set": "domain-whoami", "server": "H3Dns_tk03"},
+     {"source_ip_cidr": "192.168.7.0/24", "rule_set": "domain-whoami", "server": "H3Dns_tk04"},
      {"source_ip_cidr": "192.168.3.0/24", "rule_set": "geosite-apple", "server": "H3Dns_tk01"},
      {"source_ip_cidr": "192.168.4.0/24", "rule_set": "geosite-apple", "server": "H3Dns_tk02"},
      {"source_ip_cidr": "192.168.5.0/24", "rule_set": "geosite-apple", "server": "H3Dns_tk03"},
@@ -45,6 +49,7 @@
      {"source_ip_cidr": ["192.168.3.0/24", "192.168.4.0/24", "192.168.5.0/24", "192.168.7.0/24"], "server": "Fakeip"},
      {"rule_set": "geosite-tiktok", "server": "Fakeip"},
      {"rule_set": "geosite-apple", "server": "H3Dns"},
+     {"rule_set": "domain-whoami", "server": "H3Dns"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "Fakeip"},
      {"query_type": ["A", "HTTPS", "AAAA"], "server": "Fakeip"}
@@ -160,7 +165,8 @@
     { "tag": "geoip-netflix", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/netflix.srs", "download_detour": "🎯 全球直连" },     
     { "tag": "geoip-apple", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo-lite/geoip/apple.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geoip-cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/cn.srs", "download_detour": "🎯 全球直连" },
-    { "tag": "geoip-private", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/private.srs", "download_detour": "🎯 全球直连" }
+    { "tag": "geoip-private", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/private.srs", "download_detour": "🎯 全球直连" },
+    { "tag": "domain-whoami", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/meiao123/public/refs/heads/main/domain-whoami.srs", "download_detour": "🎯 全球直连" }
   ]
 }
 }
