--- a/config_tun_fkip.json
+++ b/config_tun_fkip.json
@@ -47,9 +47,9 @@
      {"source_ip_cidr": "192.168.5.0/24", "rule_set": "geosite-apple", "server": "H3Dns_tk03"},
      {"source_ip_cidr": "192.168.7.0/24", "rule_set": "geosite-apple", "server": "H3Dns_tk04"},
      {"source_ip_cidr": ["192.168.3.0/24", "192.168.4.0/24", "192.168.5.0/24", "192.168.7.0/24"], "server": "Fakeip"},
+     {"rule_set": "domain-whoami", "server": "Fakeip"},
      {"rule_set": "geosite-tiktok", "server": "Fakeip"},
      {"rule_set": "geosite-apple", "server": "H3Dns"},
-     {"rule_set": "domain-whoami", "server": "H3Dns"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "Fakeip"},
      {"query_type": ["A", "HTTPS", "AAAA"], "server": "Fakeip"}
