--- a/config_tun_zj_fkip.json
+++ b/config_tun_zj_fkip.json
@@ -85,7 +85,8 @@
 
   "outbounds": [
     { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["38|89|tk"] }] },
-    { "tag": "🎯 全球直连", "type": "direct" }
+    { "tag": "🎯 全球直连", "type": "direct" },
+    { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🤖 住宅家宽","🎯 全球直连"] }
   ],
   
   "route": 
