--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -28,7 +28,8 @@
      {"tag": "DoH_tk02", "address": "https://dns.google/dns-query", "address_resolver": "dns_proxy", "address_strategy": "ipv4_only", "detour": "tk02"},
      {"tag": "DoH_tk03", "address": "https://dns.google/dns-query", "address_resolver": "dns_proxy", "address_strategy": "ipv4_only", "detour": "tk03"},
      {"tag": "DoH_tk04", "address": "https://dns.google/dns-query", "address_resolver": "dns_proxy", "address_strategy": "ipv4_only", "detour": "tk04"},
-     {"tag": "dns_proxy", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk04"}
+     {"tag": "dns_proxy", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk04"},
+     {"tag": "dns_direct", "address": "211.137.58.20", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
