--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -24,14 +24,14 @@
  "dns":  {
    "servers": 
    [
-     {"tag": "DoH_tk01", "address": "https://dns.google/dns-query", "address_resolver": "UDP_tk01", "address_strategy": "ipv4_only", "detour": "tk01"},
-     {"tag": "DoH_tk02", "address": "https://dns.google/dns-query", "address_resolver": "UDP_tk02", "address_strategy": "ipv4_only", "detour": "tk02"},
-     {"tag": "DoH_tk03", "address": "https://dns.google/dns-query", "address_resolver": "UDP_tk03", "address_strategy": "ipv4_only", "detour": "tk03"},
-     {"tag": "DoH_tk04", "address": "https://dns.google/dns-query", "address_resolver": "UDP_tk04", "address_strategy": "ipv4_only", "detour": "tk04"},
-     {"tag": "UDP_tk01", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk01"},
-     {"tag": "UDP_tk02", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk02"},
-     {"tag": "UDP_tk03", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk03"},
-     {"tag": "UDP_tk04", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk04"},
+     {"tag": "DoH_tk01", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "UDP_tk01", "address_strategy": "ipv4_only", "detour": "tk01"},
+     {"tag": "DoH_tk02", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "UDP_tk02", "address_strategy": "ipv4_only", "detour": "tk02"},
+     {"tag": "DoH_tk03", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "UDP_tk03", "address_strategy": "ipv4_only", "detour": "tk03"},
+     {"tag": "DoH_tk04", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "UDP_tk04", "address_strategy": "ipv4_only", "detour": "tk04"},
+     {"tag": "UDP_tk01", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk01"},
+     {"tag": "UDP_tk02", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk02"},
+     {"tag": "UDP_tk03", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk03"},
+     {"tag": "UDP_tk04", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk04"},
      {"tag": "dns_direct", "address": "211.137.58.20", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
