--- a/config_Tproxy_ralip.json
+++ b/config_Tproxy_ralip.json
@@ -25,7 +25,7 @@
    "servers": 
    [
      {"tag": "dns_proxy", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "dns_direct", "address": "192.168.1.28", "server_port": 5225, "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+     {"tag": "dns_direct", "address": "192.168.1.28:5225", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
