--- a/singbox/configuration/1.2.x/config_sb_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_sb_Tun_ralip.json
@@ -24,25 +24,25 @@
  "dns":  {
    "servers": 
    [
-     {"tag": "dns_proxy", "type": "udp", "server": "1.1.1.1", "detour": "🚀 节点选择"},
+     {"tag": "dns_proxy", "type": "https", "server": "1.1.1.1", "detour": "🚀 节点选择"},
      {"tag": "dns_direct", "type": "udp", "server": "211.137.58.20"},
-     {"tag": "youtube", "type": "udp", "server": "1.1.1.1", "detour": "📹 YouTube"},
-     {"tag": "Ai", "type": "udp", "server": "1.1.1.1", "detour": "🤖 OpenAI"},
-     {"tag": "google", "type": "udp", "server": "1.1.1.1", "detour": "🍀 Google"},
-     {"tag": "github", "type": "udp", "server": "1.1.1.1", "detour": "👨‍💻 Github"},
-     {"tag": "discord", "type": "udp", "server": "1.1.1.1", "detour": "🐬 discord"},
-     {"tag": "mltiple", "type": "udp", "server": "1.1.1.1", "detour": "📷 Multiple"},
-     {"tag": "microsoft", "type": "udp", "server": "1.1.1.1", "detour": "🪟 Microsoft"},
-     {"tag": "tiktok", "type": "udp", "server": "1.1.1.1", "detour": "🎵 TikTok"},
-     {"tag": "netflix", "type": "udp", "server": "1.1.1.1", "detour": "🎥 Netflix"},
-     {"tag": "telegram", "type": "udp", "server": "1.1.1.1", "detour": "📲 Telegram"},
-     {"tag": "Apple", "type": "udp", "server": "1.1.1.1", "detour": "🍏 Apple"}
+     {"tag": "youtube", "type": "https", "server": "1.1.1.1", "detour": "📹 YouTube"},
+     {"tag": "Ai", "type": "https", "server": "1.1.1.1", "detour": "🤖 OpenAI"},
+     {"tag": "google", "type": "https", "server": "1.1.1.1", "detour": "🍀 Google"},
+     {"tag": "github", "type": "https", "server": "1.1.1.1", "detour": "👨‍💻 Github"},
+     {"tag": "discord", "type": "https", "server": "1.1.1.1", "detour": "🐬 discord"},
+     {"tag": "mltiple", "type": "https", "server": "1.1.1.1", "detour": "📷 Multiple"},
+     {"tag": "microsoft", "type": "https", "server": "1.1.1.1", "detour": "🪟 Microsoft"},
+     {"tag": "tiktok", "type": "https", "server": "1.1.1.1", "detour": "🎵 TikTok"},
+     {"tag": "netflix", "type": "https", "server": "1.1.1.1", "detour": "🎥 Netflix"},
+     {"tag": "telegram", "type": "https", "server": "1.1.1.1", "detour": "📲 Telegram"},
+     {"tag": "Apple", "type": "https", "server": "1.1.1.1", "detour": "🍏 Apple"}
    ],
    "rules": 
    [
      {"clash_mode": "direct", "server": "dns_direct"},
      {"clash_mode":  "global", "server": "dns_proxy"},
-     {"protocol": "ssh","server": "dns_direct"},
+     {"query_type": "HTTPS", "action": "reject"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-youtube","server": "youtube"},
      {"rule_set": "geosite-Ai","server": "Ai"},
@@ -59,7 +59,8 @@
    ], 
    "final": "dns_proxy",
    "strategy": "ipv4_only",
-   "independent_cache": true
+   "independent_cache": true,
+   "reverse_mapping": true
 },
 
 "inbounds": [
@@ -70,7 +71,7 @@
         "172.19.0.1/30",
         "fdfe:dcba:9876::1/126"
       ],
-    "mtu": 1412,
+    "mtu": 9000,
     "auto_route": true,
     "auto_redirect": true,
     "strict_route": true,
@@ -132,7 +133,6 @@
      {"protocol": "ssh", "outbound": "🎯 全球直连"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
-     {"ip_cidr": [ "192.168.1.0/24", "127.0.0.1","192.168.10.0/24"], "outbound": "🎯 全球直连"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-private", "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-Ai", "outbound": "🤖 OpenAI"},
